<resources>
    <string name="key_swap">key_swap</string>
    <string name="key_zoom">key_zoom</string>
    <string name="key_save_direction">key_save_direction</string>
    <string name="key_brightness">key_brightness</string>
    <string name="key_beautyshot">key_beautyshot</string>
    <string name="key_voiceshutter">key_voiceshutter</string>
    <string name="key_flash">key_flash</string>
    <string name="key_light">key_light</string>
    <string name="key_focus">key_focus</string>
    <string name="key_setting">key_setting</string>
    <string name="key_scene_mode">key_scene_mode</string>
    <string name="key_iso">key_iso</string>
    <string name="key_camera_picturesize">key_camera_picturesize</string>
    <string name="key_camera_coloreffect">key_camera_coloreffect</string>
    <string name="key_camera_whitebalance">key_camera_whitebalance</string>
    <string name="key_camera_timer">key_camera_timer</string>
    <string name="key_preview_size_on_device">key_preview_size_on_device</string>
    <string name="key_camera_shot_mode">key_camera_shot_mode</string>
    <string name="key_video_record_mode">key_video_record_mode</string>
    <string name="key_camera_auto_review">key_camera_auto_review</string>
    <string name="key_camera_tag_location">key_camera_tag_location</string>
    <string name="key_video_duration">key_video_duration</string>
    <string name="key_video_audio_recording">key_video_audio_recording</string>
    <string name="key_video_auto_review">key_video_auto_review</string>
    <string name="key_video_stabilization">key_video_stabilization</string>
    <string name="key_camera_storage">key_camera_storage</string>
    <string name="key_camera_shutter_sound">key_camera_shutter_sound</string>
    <string name="key_storage">key_storage</string>
    <string name="key_camera_anti_banding">key_camera_anti_banding</string>
    <string name="key_live_effect">key_live_effect</string>
    <string name="key_hdr">key_hdr</string>
    <string name="key_restore">key_restore</string>
    <string name="key_help_guide">key_help_guide</string>
    <string name="key_time_machine">key_time_machine</string>
    <string name="key_uplus_box">key_uplus_box</string>
    <string name="key_camera_3d_depth">key_camera_3d_depth</string>
    <string name="key_edit_shortcut">key_edit_shortcut</string>
    <string name="key_smart_mode">key_smart_mode</string>
    <string name="key_qf_index1">key_qf_index1</string>
    <string name="key_qf_index2">key_qf_index2</string>
    <string name="key_qf_index3">key_qf_index3</string>
    <string name="key_qf_index4">key_qf_index4</string>
    <string name="key_qf_index5">key_qf_index5</string>
    <string name="key_dual_recording">key_dual_recording</string>
    <string name="key_date_stamp">key_date_stamp</string>
    <string name="key_audiozoom">key_audiozoom</string>
    <string name="app_name">Camera</string>
    <string name="sp_ok_NORMAL">OK</string>
    <string name="sp_lowbattery_MLINE">The battery level is too low to run the camera. Please charge your phone.</string>
    <string name="sp_lowbattery">Battery currently too low to run the camera.</string>
    <string name="setting_init">"All settings will be reset to the default values.
Continue?"</string>
    <string name="sp_reset_message_NORMAL">Reset to default value?</string>
    <string name="sp_All_settings_reset_NORMAL">All settings reset.</string>
    <string name="sp_blockedByEAS_NORMAL">Camera is disabled by the Exchange server policy.</string>
    <string name="sp_block_camera_NORMAL">Camera is disabled by server policy</string>
    <string name="error_cannot_use_hdmi">Cannot use camera while connected to HDMI.</string>
    <string name="sp_dual_display_status_NORMAL">Cannot use camera in dual display mode.</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sp_camera_helpdesc_generalsetting">General</string>
    <string name="sp_Exit_NORMAL">Exit</string>
    <string name="auto">Auto</string>
    <string name="on">On</string>
    <string name="sp_review_timer_2_NORMAL">2 sec</string>
    <string name="off">Off</string>
    <string name="sp_none_NORMAL">None</string>
    <string name="normal">Normal</string>
    <string name="settings">Settings</string>
    <string name="sp_loading_camera_NORMAL">Preparing...</string>
    <string name="dual_camera_select">Swap camera</string>
    <string name="insert_sd_card">Please insert SD card.</string>
    <string name="insert_add_sd_card">Mount your external SD card.</string>
    <string name="sp_preparing_int_sd_NORMAL">Preparing internal memory...</string>
    <string name="preparing_sd">Preparing SD card..</string>
    <string name="sp_cannot_use_camera_UMS_NORMAL">Cannot use camera because SD card is mounted to a PC. Disconnect USB to proceed.</string>
    <string name="sp_connected_mass_storage_NORMAL">Mass storage</string>
    <string name="sp_not_available_connected_mass_storage_NORMAL">"Camera is not available.
Mass storage connected to PC."</string>
    <string name="sp_launch_NORMAL">Launch</string>
    <string name="sp_memory_full_diag_title_NORMAL">Memory full</string>
    <string name="sp_memory_full_diag_1_NORMAL">"Not enough memory in %1$s.
Your file will be saved to %2$s.
Free more memory in %3$s by connecting phone to PC or launching file manager.

Launch file manager now?
Check your files in '%4$s'"</string>
    <string name="sp_memory_full_diag_1_no_file_manager_NORMAL">"Not enough memory in %1$s.
Your file will be saved to %2$s.
Free more memory in %3$s by connecting phone to PC or launching file manager."</string>
    <string name="sp_memory_full_diag_2_NORMAL">"Not enough memory in %1$s.
Free more memory in %1$s by connecting phone to PC or launching file manager.

Launch file manager now?
Check your files in '%2$s'"</string>
    <string name="sp_memory_full_diag_2_no_file_manager_NORMAL">"Not enough memory in %1$s.
Free more memory in %1$s by connecting phone to PC or launching file manager."</string>
    <string name="sp_memory_full_diag_3_NORMAL">"Not enough memory in all memory.
Free more memory by connecting phone to PC or launching file manager.

Launch file manager now?
Check your files in '%1$s'"</string>
    <string name="sp_memory_full_diag_3_no_file_manager_NORMAL">"Not enough memory in all memory.
Free more memory by connecting phone to PC or launching file manager."</string>
    <string name="sp_storage_full_popup_ics_title_NORMAL">Storage full</string>
    <string name="sp_storage_full_message_not_on_internal_NORMAL">Not enough space on internal memory.</string>
    <string name="sp_storage_full_message_not_on_internal_sto_NORMAL">Not enough space on internal storage.</string>
    <string name="sp_storage_full_message_not_on_sd_NORMAL">Not enough space on SD card.</string>
    <string name="sp_storage_full_message_save_to_internal_NORMAL">File is save to internal memory.</string>
    <string name="sp_storage_full_message_save_to_internal_st_NORMAL">File is save to internal storage.</string>
    <string name="sp_storage_full_message_save_to_sd_NORMAL">File is save to SD card.</string>
    <string name="sp_storage_full_saving_file_NORMAL">Saving file...</string>
    <string name="sp_storage_full_free_NORMAL">To free up space, delete unused files.</string>
    <string name="msg_save_progress">Saving...</string>
    <string name="sp_storage_full_popup_ics_1_NORMAL">Not enough space on %s. To free up space, delete unused files.</string>
    <string name="sp_storage_full_popup_ics_2_NORMAL">Not enough space on %1$s. File is save to %2$s. To free up space, delete unused files.</string>
    <string name="sp_storage_full_popup_ics_3_NORMAL">Not enough space on all storage. To free up space, delete unused files.</string>
    <string name="sp_storage_full_popup_ics_6_NORMAL">Not enough space on %s. Saving file...</string>
    <string name="sp_full_popup_ics_1_not_in_memory_NORMAL">Not enough space on internal memory. To free up space, delete unused files.</string>
    <string name="sp_full_popup_ics_1_not_in_storage_NORMAL">Not enough space on internal storage. To free up space, delete unused files.</string>
    <string name="sp_full_popup_ics_1_not_sd_NORMAL">Not enough space on SD card. To free up space, delete unused files.</string>
    <string name="sp_full_popup_ics_2_not_in_memory_to_sd_NORMAL">Not enough space on internal memory. File will be saved to SD card. To free up space, delete unused files.</string>
    <string name="sp_full_popup_ics_2_not_in_storage_to_sd_NORMAL">Not enough space on internal storage. File will be saved to SD card. To free up space, delete unused files.</string>
    <string name="sp_full_popup_ics_2_not_sd_to_in_memory_NORMAL">Not enough space on SD card. File will be saved to internal memory. To free up space, delete unused files.</string>
    <string name="sp_full_popup_ics_2_not_sd_to_in_storage_NORMAL">Not enough space on SD card. File will be saved to internal storage. To free up space, delete unused files.</string>
    <string name="sp_full_popup_ics_6_not_in_memory_NORMAL">Not enough space on internal memory. Saving file...</string>
    <string name="sp_full_popup_ics_6_not_in_storage_NORMAL">Not enough space on internal storage. Saving file...</string>
    <string name="sp_full_popup_ics_6_not_sd_NORMAL">Not enough space on SD card. Saving file...</string>
    <string name="sp_internal_sd_prepared_NORMAL">Internal memory is prepared.</string>
    <string name="sp_external_sd_prepared_NORMAL">SD card is prepared.</string>
    <string name="sp_not_enough_memory_NORMAL">"Not enough storage on all Memory.
Free more memory."</string>
    <string name="not_enough_space">Insert a new external memory card or delete some contents.</string>
    <string name="sp_not_enough_int_sd_NORMAL">"Not enough storage on internal memory.
Your file will be saved to SD card."</string>
    <string name="sp_not_enough_add_space_NORMAL">"Not enough storage on SD card.
Free more memory."</string>
    <string name="sp_not_enough_sd_int_NORMAL">"Not enough storage on SD card.
Your file will be saved to internal memory."</string>
    <string name="sp_media_scanning_NORMAL">"Media is scanning. Try again,
after media scanning completion."</string>
    <string name="sp_media_scanning_ics_NORMAL">Try again after scanning media files.</string>
    <string name="scanning_sdcard_media_files">Scanning SD card media files...</string>
    <string name="sp_ext_sdcard_not_exist_NORMAL">SD card does not exist. Storage is changed to internal memory.</string>
    <string name="sp_sdremoved_change_int_NORMAL">SD card is removed. Storage is changed to internal memory.</string>
    <string name="sp_sd_card_removed_NORMAL">SD card is removed. Insert the SD card.</string>
    <string name="camera_closed_due_to_sdcard_removal">SD card is unexpectedly removed. Camera is closed.</string>
    <string name="image_size">Image size</string>
    <string name="scene_mode">Scene mode</string>
    <string name="iso">ISO</string>
    <string name="white_balance">White balance</string>
    <string name="color_effect">Colour effect</string>
    <string name="shot_mode">Shot mode</string>
    <string name="record_mode">Recording mode</string>
    <string name="focus">Focus</string>
    <string name="flash">Flash</string>
    <string name="brightness">Brightness</string>
    <string name="sp_voiceshutter_NORMAL">Voice shutter</string>
    <string name="video_size">Video size</string>
    <string name="video_voice">Audio recording</string>
    <string name="sp_shot_mode_beauty_NORMAL">Beauty shot</string>
    <string name="sp_live_effect_NORMAL">Live effect</string>
    <string name="sp_shot_mode_time_catch_NORMAL">Time catch shot</string>
    <string name="sp_3d_depth_NORMAL">3D depth</string>
    <string name="edit_quick_menu">Edit quick menu</string>
</resources>