<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:sharedPreferenceName="back_3d_camcorder"
  xmlns:camera="http://schemas.android.com/apk/res/com.lge.camera">
    <ListPreference camera:key="@string/key_edit_shortcut" camera:title="@string/edit_quick_menu" camera:settingMenuIcons="@array/editShortcut_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowQuickFunctionDragDrop" camera:persist="false" />
    <ListPreference camera:key="@string/key_swap" camera:title="@string/dual_camera_select" camera:menuIcons="@array/swap_3d_menuIcons" camera:menuCommand="com.lge.camera.command.SwapCamera" camera:settingMenuIcons="@array/swap_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraMode" camera:defaultValue="back" camera:entries="@array/swap_entries" camera:entryValues="@array/swap_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_3d_depth" camera:title="@string/sp_3d_depth_NORMAL" camera:menuIcons="@array/camera_3d_depth_menuIcons" camera:menuCommand="com.lge.camera.command.showCamera3dDepth" camera:settingMenuIcons="@array/setting_camera_3d_depth_menuIcons" camera:settingMenuCommand="com.lge.camera.command.showSettingCamera3dDepth" camera:entryCommand="com.lge.camera.command.setting.SetZoom" camera:defaultValue="0" camera:persist="false" />
    <ListPreference camera:key="@string/key_live_effect" camera:title="@string/sp_live_effect_NORMAL" camera:menuIcons="@array/camcorder_liveeffect_menuIcons" camera:menuCommand="com.lge.camera.command.ShowLiveEffectSubMenu" camera:settingMenuIcons="@array/camcorder_liveeffect_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetLiveEffect" camera:defaultValue="off" camera:entries="@array/camcorder_liveeffect_entries" camera:entryValues="@array/camcorder_liveeffect_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_flash" camera:title="@string/flash" camera:menuIcons="@array/camera_3d_flash_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/I20_camera_flash_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetFlashMode" camera:defaultValue="off" camera:entries="@array/camcorder_flash_entries" camera:entryValues="@array/camcorder_flash_entryValues" camera:indicatorIcons="@array/I20_camcorder_flash_indicatorIcons" camera:persist="true" />
    <ListPreference camera:key="@string/key_setting" camera:title="@string/settings" camera:menuIcons="@array/settings_3d_menuIcons" camera:menuCommand="com.lge.camera.command.ShowSettingMenu" camera:persist="false" />
    <ListPreference camera:key="@string/key_brightness" camera:title="@string/brightness" camera:menuIcons="@array/brightness_3d_menuIcons" camera:menuCommand="com.lge.camera.command.ShowBrightness" camera:settingMenuIcons="@array/brightness_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowSettingBrightness" camera:entryCommand="com.lge.camera.command.setting.SetBrightness" camera:defaultValue="6" camera:persist="false" />
    <ListPreference camera:key="@string/key_preview_size_on_device" camera:title="@string/video_size" camera:menuIcons="@array/g1_video_size_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/video_size_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetVideoImageSize" camera:defaultValue="1280x720" camera:entries="@array/g1_video_size_entries" camera:entryValues="@array/g1_video_size_entryValues" camera:indicatorIcons="@array/g1_video_size_indicatorIcons" camera:extraInfos="@array/g1_video_size_extraInfos_previewSizeOnScreen" camera:extraInfos2="@array/g1_video_size_extraInfos_bitrate" camera:extraInfos3="@array/g1_video_size_extraInfos_hfr" />
    <ListPreference camera:key="@string/key_camera_whitebalance" camera:title="@string/white_balance" camera:menuIcons="@array/camera_whiteBalance_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_whiteBalance_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraWhiteBalance" camera:defaultValue="auto" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_coloreffect" camera:title="@string/color_effect" camera:menuIcons="@array/colorEffect_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/colorEffect_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraColorEffect" camera:defaultValue="none" camera:entries="@array/colorEffect_entries" camera:entryValues="@array/colorEffect_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_video_audio_recording" camera:title="@string/video_voice" camera:menuIcons="@array/video_audioRecording_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/video_audioRecording_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetVideoVoice" camera:defaultValue="unmute" camera:entries="@array/video_audioRecording_entries" camera:entryValues="@array/video_audioRecording_entryValues" camera:indicatorIcons="@array/video_audioRecording_indicatorIcons" camera:persist="false" />
</PreferenceGroup>