<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:sharedPreferenceName="back_camera"
  xmlns:camera="http://schemas.android.com/apk/res/com.lge.camera">
    <ListPreference camera:key="@string/key_edit_shortcut" camera:title="@string/edit_quick_menu" camera:settingMenuIcons="@array/editShortcut_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowQuickFunctionDragDrop" camera:persist="false" />
    <ListPreference camera:key="@string/key_swap" camera:title="@string/dual_camera_select" camera:menuIcons="@array/swap_menuIcons" camera:menuCommand="com.lge.camera.command.SwapCamera" camera:settingMenuIcons="@array/swap_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraMode" camera:defaultValue="back" camera:entries="@array/swap_entries" camera:entryValues="@array/swap_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_voiceshutter" camera:title="@string/sp_voiceshutter_NORMAL" camera:menuIcons="@array/camera_voiceshutter_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_voiceshutter_settingMenuIcons" camera:entryCommand="com.lge.camera.command.SetVoiceShutterMode" camera:defaultValue="off" camera:entries="@array/camera_voiceshutter_entries" camera:entryValues="@array/camera_voiceshutter_entryValues" />
    <ListPreference camera:key="@string/key_time_machine" camera:title="@string/sp_shot_mode_time_catch_NORMAL" camera:menuIcons="@array/camera_time_machine_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_time_machine_settingMenuIcons" camera:entryCommand="com.lge.camera.command.SetTimeMachineMode" camera:defaultValue="off" camera:entries="@array/camera_time_machine_entries" camera:entryValues="@array/camera_time_machine_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_shot_mode" camera:title="@string/shot_mode" camera:menuIcons="@array/f9_camera_shot_mode_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/I20_camera_shot_mode_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraShotMode" camera:defaultValue="shotmode_normal" camera:entries="@array/f9_camera_shot_mode_entries" camera:entryValues="@array/f9_camera_shot_mode_entryValues" camera:extraInfos="@array/f9_camera_shot_mode_extraInfos_preview_size" camera:persist="false" camera:extraInfos2="@array/f9_camera_shot_mode_extraInfos_previewSizeOnScreen" camera:extraInfos3="@array/f9_camera_shot_mode_extraInfos_change_size_message" />
    <ListPreference camera:key="@string/key_setting" camera:title="@string/settings" camera:menuIcons="@array/settings_menuIcons" camera:menuCommand="com.lge.camera.command.ShowSettingMenu" camera:persist="false" />
    <ListPreference camera:key="@string/key_flash" camera:title="@string/flash" camera:menuIcons="@array/I20_camera_flash_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/I20_camera_flash_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetFlashMode" camera:defaultValue="off" camera:entries="@array/camera_flash_entries" camera:entryValues="@array/camera_flash_entryValues" camera:indicatorIcons="@array/I20_camera_flash_indicatorIcons" camera:persist="true" />
    <ListPreference camera:key="@string/key_brightness" camera:title="@string/brightness" camera:menuIcons="@array/brightness_menuIcons" camera:menuCommand="com.lge.camera.command.ShowBrightness" camera:settingMenuIcons="@array/brightness_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowSettingBrightness" camera:entryCommand="com.lge.camera.command.setting.SetBrightness" camera:defaultValue="6" camera:persist="false" />
    <ListPreference camera:key="@string/key_focus" camera:title="@string/focus" camera:menuIcons="@array/camera_focus_manual_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_focus_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraFocusMode" camera:defaultValue="auto" camera:entries="@array/camera_focus_manual_entries" camera:entryValues="@array/camera_focus_manual_entryValues" camera:indicatorIcons="@array/camera_focus_manual_indicatorIcons" />
    <ListPreference camera:key="@string/key_camera_picturesize" camera:title="@string/image_size" camera:menuIcons="@array/f9_camera_pictureSize_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_pictureSize_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraImageSize" camera:defaultValue="4208x3120" camera:entries="@array/f9_camera_pictureSize_entries" camera:entryValues="@array/f9_camera_pictureSize_entryValues" camera:indicatorIcons="@array/f9_camera_pictureSize_indicatorIcons" camera:extraInfos="@array/f9_camera_pictureSize_extraInfos_postview_sample_size" camera:extraInfos2="@array/f9_camera_pictureSize_extraInfos_preview_size" camera:extraInfos3="@array/f9_camera_pictureSize_extraInfos_previewSizeOnScreen" />
    <ListPreference camera:key="@string/key_scene_mode" camera:title="@string/scene_mode" camera:menuIcons="@array/I20_sceneMode_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/I20_sceneMode_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetSceneMode" camera:defaultValue="auto" camera:entries="@array/I20_scene_mode_entries" camera:entryValues="@array/I20_scene_modes_entryValues" camera:indicatorIcons="@array/I20_sceneMode_indicatorIcons" camera:persist="false" />
    <ListPreference camera:key="@string/key_iso" camera:title="@string/iso" camera:menuIcons="@array/iso_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/iso_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraIso" camera:defaultValue="auto" camera:entries="@array/iso_entries" camera:entryValues="@array/iso_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_whitebalance" camera:title="@string/white_balance" camera:menuIcons="@array/camera_whiteBalance_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_whiteBalance_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraWhiteBalance" camera:defaultValue="auto" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_coloreffect" camera:title="@string/color_effect" camera:menuIcons="@array/colorEffect_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/colorEffect_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraColorEffect" camera:defaultValue="none" camera:entries="@array/colorEffect_entries" camera:entryValues="@array/colorEffect_entryValues" camera:persist="false" />
</PreferenceGroup>