<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:sharedPreferenceName="front_camera"
  xmlns:camera="http://schemas.android.com/apk/res/com.lge.camera">
    <ListPreference camera:key="@string/key_edit_shortcut" camera:title="@string/edit_quick_menu" camera:settingMenuIcons="@array/editShortcut_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowQuickFunctionDragDrop" camera:persist="false" />
    <ListPreference camera:key="@string/key_swap" camera:title="@string/dual_camera_select" camera:menuIcons="@array/swap_menuIcons" camera:menuCommand="com.lge.camera.command.SwapCamera" camera:settingMenuIcons="@array/swap_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraMode" camera:defaultValue="front" camera:entries="@array/swap_entries" camera:entryValues="@array/swap_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_voiceshutter" camera:title="@string/sp_voiceshutter_NORMAL" camera:menuIcons="@array/camera_voiceshutter_menuIcons" camera:menuIconsExpand="@array/camera_voiceshutter_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_voiceshutter_settingMenuIcons" camera:settingMenuIconsExpand="@array/camera_voiceshutter_settingMenuIcons_expand" camera:entryCommand="com.lge.camera.command.SetVoiceShutterMode" camera:defaultValue="off" camera:entries="@array/camera_voiceshutter_entries" camera:entryValues="@array/camera_voiceshutter_entryValues" />
    <ListPreference camera:key="@string/key_beautyshot" camera:title="@string/sp_shot_mode_beauty_NORMAL" camera:menuIcons="@array/beautyshot_menuIcons" camera:menuCommand="com.lge.camera.command.ShowBeautyshot" camera:settingMenuIcons="@array/beautyshot_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowSettingBeautyShot" camera:entryCommand="com.lge.camera.command.setting.SetBeautyshot" camera:defaultValue="4" />
    <ListPreference camera:key="@string/key_brightness" camera:title="@string/brightness" camera:menuIcons="@array/brightness_menuIcons" camera:menuIconsExpand="@array/brightness_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowBrightness" camera:settingMenuIcons="@array/brightness_settingMenuIcons" camera:settingMenuIconsExpand="@array/brightness_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowSettingBrightness" camera:entryCommand="com.lge.camera.command.setting.SetBrightness" camera:defaultValue="3" camera:persist="false" />
    <ListPreference camera:key="@string/key_setting" camera:title="@string/settings" camera:menuIcons="@array/settings_menuIcons" camera:menuCommand="com.lge.camera.command.ShowSettingMenu" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_picturesize" camera:title="@string/image_size" camera:menuIcons="@array/l90_front_camera_pictureSize_menuIcons" camera:menuIconsExpand="@array/l90_front_camera_pictureSize_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_pictureSize_settingMenuIcons" camera:settingMenuIconsExpand="@array/l90_front_camera_pictureSize_settingMenuIcons_expand" camera:entryCommand="com.lge.camera.command.setting.SetCameraImageSize" camera:defaultValue="1280x720" camera:entries="@array/l90_front_camera_pictureSize_entries" camera:entryValues="@array/l90_front_camera_pictureSize_entryValues" camera:indicatorIcons="@array/l90_front_camera_pictureSize_indicatorIcons" camera:extraInfos="@array/l90_front_camera_pictureSize_extraInfos_postview_sample_size" camera:extraInfos2="@array/l90_front_camera_pictureSize_extraInfos_preview_size" camera:extraInfos3="@array/l90_front_camera_pictureSize_extraInfos_previewSizeOnScreen" />
    <ListPreference camera:key="@string/key_scene_mode" camera:title="@string/scene_mode" camera:menuIcons="@array/sceneMode_front_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/sceneMode_front_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetSceneMode" camera:defaultValue="auto" camera:entries="@array/scene_mode_front_entries" camera:entryValues="@array/scene_modes_front_entryValues" camera:indicatorIcons="@array/sceneMode_front_indicatorIcons" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_whitebalance" camera:title="@string/white_balance" camera:menuIcons="@array/camera_whiteBalance_menuIcons" camera:menuIconsExpand="@array/camera_whiteBalance_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_whiteBalance_settingMenuIcons" camera:settingMenuIconsExpand="@array/camera_whiteBalance_settingMenuIcons_expand" camera:entryCommand="com.lge.camera.command.setting.SetCameraWhiteBalance" camera:defaultValue="auto" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_coloreffect" camera:title="@string/color_effect" camera:menuIcons="@array/colorEffect_menuIcons" camera:menuIconsExpand="@array/colorEffect_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/colorEffect_settingMenuIcons" camera:settingMenuIconsExpand="@array/colorEffect_settingMenuIcons_expand" camera:entryCommand="com.lge.camera.command.setting.SetCameraColorEffect" camera:defaultValue="none" camera:entries="@array/colorEffect_entries" camera:entryValues="@array/colorEffect_entryValues" camera:persist="false" />
</PreferenceGroup>