<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:sharedPreferenceName="front_camcorder"
  xmlns:camera="http://schemas.android.com/apk/res/com.lge.camera">
    <ListPreference camera:key="@string/key_edit_shortcut" camera:title="@string/edit_quick_menu" camera:settingMenuIcons="@array/editShortcut_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowQuickFunctionDragDrop" camera:persist="false" />
    <ListPreference camera:key="@string/key_swap" camera:title="@string/dual_camera_select" camera:menuIcons="@array/swap_menuIcons" camera:menuCommand="com.lge.camera.command.SwapCamera" camera:settingMenuIcons="@array/swap_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraMode" camera:defaultValue="front" camera:entries="@array/swap_entries" camera:entryValues="@array/swap_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_preview_size_on_device" camera:title="@string/video_size" camera:menuIcons="@array/omega_front_video_size_menuIcons" camera:menuIconsExpand="@array/omega_front_video_size_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/video_size_settingMenuIcons" camera:settingMenuIconsExpand="@array/omega_front_video_size_settingMenuIcons_expand" camera:entryCommand="com.lge.camera.command.setting.SetVideoImageSize" camera:defaultValue="1920x1088" camera:entries="@array/omega_front_video_size_entries" camera:entryValues="@array/omega_front_video_size_entryValues" camera:indicatorIcons="@array/omega_front_video_size_indicatorIcons" camera:extraInfos="@array/omega_front_video_size_extraInfos_previewSizeOnScreen" camera:extraInfos2="@array/omega_front_video_size_extraInfos_bitrate" camera:extraInfos3="@array/omega_front_video_size_extraInfos_hfr" />
    <ListPreference camera:key="@string/key_video_record_mode" camera:title="@string/record_mode" camera:menuIcons="@array/omega_front_video_record_mode_menuIcons" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/video_record_mode_settingMenuIcons" camera:entryCommand="com.lge.camera.command.setting.SetVideoRecordMode" camera:defaultValue="recordmode_normal" camera:entries="@array/omega_front_video_record_mode_entries" camera:entryValues="@array/omega_front_video_record_mode_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_brightness" camera:title="@string/brightness" camera:menuIcons="@array/brightness_menuIcons" camera:menuIconsExpand="@array/brightness_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowBrightness" camera:settingMenuIcons="@array/brightness_settingMenuIcons" camera:settingMenuIconsExpand="@array/brightness_settingMenuIcons" camera:settingMenuCommand="com.lge.camera.command.ShowSettingBrightness" camera:entryCommand="com.lge.camera.command.setting.SetBrightness" camera:defaultValue="6" camera:persist="false" />
    <ListPreference camera:key="@string/key_setting" camera:title="@string/settings" camera:menuIcons="@array/settings_menuIcons" camera:menuCommand="com.lge.camera.command.ShowSettingMenu" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_whitebalance" camera:title="@string/white_balance" camera:menuIcons="@array/camera_whiteBalance_menuIcons" camera:menuIconsExpand="@array/camera_whiteBalance_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/camera_whiteBalance_settingMenuIcons" camera:settingMenuIconsExpand="@array/camera_whiteBalance_settingMenuIcons_expand" camera:entryCommand="com.lge.camera.command.setting.SetCameraWhiteBalance" camera:defaultValue="auto" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_coloreffect" camera:title="@string/color_effect" camera:menuIcons="@array/colorEffect_menuIcons" camera:menuIconsExpand="@array/colorEffect_menuIcons_expand" camera:menuCommand="com.lge.camera.command.ShowQuickFunctionSettingMenu" camera:settingMenuIcons="@array/colorEffect_settingMenuIcons" camera:settingMenuIconsExpand="@array/colorEffect_settingMenuIcons_expand" camera:entryCommand="com.lge.camera.command.setting.SetCameraColorEffect" camera:defaultValue="none" camera:entries="@array/colorEffect_entries" camera:entryValues="@array/colorEffect_entryValues" camera:persist="false" />
</PreferenceGroup>